# bhe-blog

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
backend/: database_handler.cpp  database_handler.h  database_handler.hpp  databasehandler.cpp  databasehandler.h  server-handler.cpp  server-handler.h
cmake_modules/: pqxx-config.cmake
test/: catch.hpp  database-test.cpp
tests/: html_genrator_test.cpp
